<resources>
    <string name="app_name">Sivanmalai Murugan</string>
	<string name="navigation_drawer_open">Open</string>
	<string name="navigation_drawer_close">Close</string>
    <string name="app_name_header">சிவன்மலை முருகன்</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
	<string name="banner_ad_1">ca-app-pub-1439926476174790/8217732807</string>
    <string name="banner_ad_2">ca-app-pub-1439926476174790/5470357953</string>
    <string name="banner_ad_3">ca-app-pub-1439926476174790/8315727736</string>
    <string name="banner_ad_4">ca-app-pub-1439926476174790/1652324456</string>
    <string name="banner_ad_5">ca-app-pub-1439926476174790/1311335683</string>
    <string name="banner_ad_6">ca-app-pub-1439926476174790/5940319172</string>
	<string name="interid1">ca-app-pub-1439926476174790/7062355812</string>
	<string name="interid">ca-app-pub-1439926476174790/4891773455</string>
	<string name="fm">ஆன்மிக FM ரேடியோ</string>
	<string name="songs">உத்தரவு பொருள்கள்</string>
	<string name="songs_main_title">உத்தரவு பொருள்கள்</string>
	<string name="news">ஆன்மிக சிந்தனைகள்</string>
	<string name="gallery">முருகன் புகைப்படங்கள்</string>
    <string name="arupadai_veedugal">தல சிறப்புக்கள் &amp; வரலாறு </string>
    <string name="essay">பூஜைகள் &amp; திருவிழாக்கள்</string>
    <string name="stories">பூஜைகள் &amp; திருவிழாக்கள்</string>
    <string name="videos">சேவைகள்</string>
    <string name="kantha_puranam">கந்தர் சஷ்டி கவசம்</string>
    <string name="articles">ஆங்கில கட்டுரைகள்</string>
    <string name="thiruparakundram">தல சிறப்பு &amp;  வரலாறு </string>
    <string name="tiruchendur">திருவிழாக்கள் &amp; பூஜைகள்</string>
    <string name="palani">சேவைகள்</string>
    <string name="swamimalai">சுவாமிமலை</string>
    <string name="thiruthanigai">திருத்தணிகை</string>
    <string name="palamuthirsolai">பழமுதிர்ச்சோலை</string>
    <string name="first">முதல்படை வீடு</string>
    <string name="second">இரண்டாம்படை வீடு</string>
    <string name="third">மூன்றாவது படை வீடு</string>
    <string name="fourth">நான்காவது படை வீடு</string>
    <string name="fifth">ஐந்தாவது படை வீடு</string>
    <string name="sixth">ஆறாவது படை வீடு</string>
    <string name="thiruparakundram_main_content">\t\t\tசைதன்ய சொரூபமாக இன்றும் சிவ வாக்கிய சித்தர் இங்கு வாழ்ந்து வருவதாகவும், உட்பிரகாரத்தில் குகையில் சிவவாக்கியர் அமர்ந்த நிலையில், வள்ளியோடு சுப்ரமணியர் அருளும் காட்சி உள்ளது. அணையாத தீபம் எரிந்து கொண்டுள்ளது சிறப்பாகும். திருநள்ளாறு சென்று சனீஸ்வரனை தரிசிப்பதும், சூரிய நாராயணர் கோயில் சென்று சூரியனை வழிபடுவதால் சிறப்பும் இங்கு கிடைக்கும்.
		\n\n\t”திருப்பூர் மாவட்டத்தில் காங்கயம் வட்டத்தில் திருப்பூர் சாலையில் காங்கயத்திலிருந்து 4 கி.மீ தொலைவில் சிவன்மலை உள்ளது. காங்கய நாட்டுக்கு பொதுமலையாக உள்ளது. காங்கய நாட்டுப் பதினான்கு ஊர்ப்பொது மக்களும் வழிபட்டதாகவும் திருப்பணிகள் செய்ததாகவும் குடமுழுக்கு விழா நடத்தியதாகவும் இலக்கியங்களும் தனிப்பாடல்களும் வரலாற்று ஆவணங்களும் கூறுகிறது.”
		\n\n\tகொங்கு நாட்டுக் குன்றுதோறாடல் தலங்களில் சிறந்தது சிவன்மலை சமயப் பெருமையும், இலக்கியச் சிறப்பும், புராணப் புகழும் உடையது சிவன்மலை, சிறுமலையாக இருந்தாலும் சிறப்புமிக்கது.
		\n\n\tவரலாற்று முற்பட்ட காலத்திலிருந்தே சிவன்மலைப் பகுதியில் மக்கள் வாழ்ந்துள்ளனர் படியூர் சர்வோதய சங்கம் அமைந்துள்ள இடத்தின் பின்புறம் தொல்பழங்காலப் பெருங்கற்படைச் சின்னம் காணப்படுகிறது. இதன்மூலம் சிவன்மலையின் தொன்மை வெளிப்படுகிறது.
		\n\n\t‘பட்டாலி நகர்ச் சிவன்மலை’ ‘சிவன்மலைக் பட்டாலியாரை என்றே குறிப்புக்கள் வருகின்றன. சிவன்மலைச் சுப்பிரமணியரை பட்டாலி பால்வெண்ணீசுவரர் பாலன் என்று அழைப்பதே வழக்கமாகும.


 </string>
	<string name="historytitle">வரலாறு </string>
    <string name="thiruparakundram_title1">தோற்றம் :</string>
    <string name="thiruparakundram_content1">\t\t\tஎல்லா மலைகளையும் இமயத்துடன் தொடா;புபடுத்திக் கூறுவது நம் நாட்டு வழக்கம். சிவன்மலைக்கும் அவ்வகையான பழந்தொடா;பு ஒன்று கூறப்படுகிறது.திhpபுர சம்உறாரத்தின்போது சிவபெருமான் வாசுகியைக் கணையாக வைத்து சேருமலையை வில்லாக வளைத்தார். அப்போது மேரு மலையின் சிகரங்களில் ஒன்று காங்கய நாட்டில் விழுந்தது.</string>
    <string name="thiruparakundram_title2">இலக்கியங்களில் சிவமலை :</string>
    <string name="thiruparakundram_content2">\t\t\tசிவாசலம், சிவராத்திரி, சிவசயிலம், சிவமாமலை, சிவசைலம், சிவநாகம், சிவகிரி என்று பல பெயாகளாலும் குறிக்கப்பட்டுள்ளது.

 </string>
    <string name="thiruparakundram_title3">புலவர்கள் :</string>
    <string name="thiruparakundram_content3">\t\t\tதெரிதமிழ்தேர் சிவமலை" “செல்வச்சிவமலை" “வடித்த செந்தமிழ்ச் சிவாத்திரி" “வலிமைசோர் சிவாசலம்" “புவனம் பரவும் சிவமலை".
\n\n\t“கல்யாணசிவமலை" “இருநிதி சூழ் சிவமலை" “மகிமைசேர் சிவமலை" “தவசுபுரி சிவமலை".என்றெல்லாம் புகழ்ந்து சிவன்மலையைப் பாடிப் பரவியுள்ளனா. பார்வதிதேவியார் எழுந்தருளிய காரணத்தால் “சத்திகிரி" எனப்பெயார் பெற்றது. “சத்திசிவகிரி" என்பதும் வழக்கம்.
</string>
    <string name="thiruparakundram_title4">திருநாமங்கள் :</string>
    <string name="thiruparakundram_content4">\t\t\tசிவமலை முருகனைச் சுப்பிரமணியர், சிவசுப்பிரமணியர், கல்யாண சிவசுப்பிரமணியார், காங்கயன், கந்தசுவாமி, வேலன், வேலுசாமி, முத்தய்யன், முருகையன், சிவாசலபதி, குகன், சிவாசலவேந்தன், சிவாத்திரிநாதன், வள்ளிமணாளன், கந்தவேள், குமரன், துரைசாமி, மரகதமயூரன் என்று பல்வேறு பெயார்களில் அழைத்துள்ளனார்.

\n\n\t
பஇப்பெயார்களில் எப்பெயரிட்டு அழைத்தாலும் சுப்பிரமணியார் அதனை மிக உவப்பாக ஏற்றுக்கொள்வார். மலையை வணங்கினாலே சிவன்மலையாண்டவரை வணங்கியபேறு பெறலாம.

\n\n\t
சிவன்மலைச் சிறப்புகள் மலையைச் சுற்றிலும் அட்ட துர்க்கை இருப்பதாகக் கூறுவர். ஆலாம்பாடி வனசாட்சி (காட்டம்மை) பாப்பிணி அங்காளபரமேஸ்சுவர், காங்கயம் ஆயி அம்மன், வலுப்பூரம்மன், தங்கம்மன், அத்தனூரம்மன், கர்யகாளியம்மன், செல்வநாயகி என்று எட்டு அம்மன் பெயர்களைக் சூழ்ந்துள்ள எட்டு இடங்களுக்குக் கூறுகின்றனர்.
\n\n\tஇதனைக் குறவஞ்சி, அட்டதுர்க்கை எட்டுப் பத்திரகாளியும் ஓர் எட்டுத் திக்கும் காவல்மலையே அட்டநாகம் அட்ட குலங்கள் குலபருவதமோர் எட்டும் சுற்றும் தாங்கும்மலையே| என்று கூறுகிறது.
\n\n\t496 படிகள் சிவன்மலையில் உள்ளன. கடல் மட்டத்திலிருந்து 400 அடி உயரத்தில் மலை அமைந்துள்ளது. படிக்கட்டில் உள்ள பாலவிநாயகார் கோயிலைப் பழையகோட்டை சின்ன அரண்மனை பார்வதி அர்ஜீனன் அவார்களும், அவார்கள் தாயார் வெளர்ளக்கிணறு மீனாட்சியம்மாள் அவார்களும் 1966 ஆம் ஆண்டு கட்டி வைத்துள்ளார். பதினெட்டாம் படியைச் சத்தியப்படி என அழைப்பார். அங்கு வழக்குகள் தீர்த்து வைக்கப்பட்டுள்ளன. இப்பதினெட்டாம்படி புராணப்படி என்றும் அழைக்கப்பெறும். இங்குதான் சடைச்சியம்மன் வழிபட்டதும், குடியிருப்பதுமாகும் என்று குறவஞ்சியில் கூறப்படுகிறது. இங்கு அர்த்தமேரு அமைக்கப்பட்டுள்ளது அதன்மேல் திருவடிகள் உள்ளன.
		\n\n\tபிற இடங்களில் விநாயகருக்கு முதல் பூசை நடத்தே மற்ற தெய்வங்களுக்குப் பூசை நடக்கும். ஆனால் சிவன்மலையில் முதலில் முருகனுக்கே பூசை நடைபெறுகிறது. விநாயகப் பெருமானே முருகனை வழிபடுவதாக ஐதீகம் என்று சிவாச்சாரியார்கள் கூறுகின்றார்.
		\n\n\tவடக்கே தலையும் தெற்கே தோகையும் இருந்தால் தேவமயில் என்றும், வடக்கே தோகையும் தெற்கே தலையும் இருந்தால் அசுர மயில் என்றும் கூறுவர். சிவன்மலையில் தேவ மயிலே உள்ளது.
		\n\n\tசூரியனைப் பார்த்து எல்லா நவக்கிரங்கள் இருப்பதும் இந்தத் தலத்தின் விசேடமாகும்.
\n\n\tமலைப்படிகளின் வழியாக அன்பர்கள் நடந்து சென்றால் அவர்கள் தங்கி ஓய்வெடுக்கப் பல அழகிய மண்படங்கள் பழையதும் புதியதுமாக உள்ளன. பாத விநாயகர் மண்டபம் பழையகோட்டை மண்டபம் அருளாடிகள் மண்டபம் பழைய கோட்டை சின்ன அரண்மனை மண்டபம் (பால விநாயகர் கோயிலுடன்) சிலம்பகவுண்டன்வலசு வெங்கட்ரமணசாமிக் கவுண்டர் மண்டபம் பொன்னப்ப செட்டியார் வகையறா மண்டபம் சோமசுந்தரக் குருக்கள் மண்டபம் நாலுகால் மண்டபம் வெள்ளக்கிணறு வெள்ளியங்கிரிக் கவுண்டர் வகையரா மண்டபம் காங்கயம் கதிர்வேல் முதலியார் மண்டபம் தாராபுரம் நரசிம்மன் மண்படம் ராமலட்சுமியம்மன் மண்டபம் .போன்ற பல மண்டபங்கள் உள்ளன. இவ்வயைன மண்டபங்களை கொங்குநாட்டுக் கல்வெட்டுக்கள் ~கற்பந்தல்| என்று சிறப்பிக்கிறது.
\n\n\tசிவன்மலைமேல் கோயிலுக்கு வெளியே தீபத்தம்பம் உள்ளது. தீபத்தம்பத்தில் கிழக்கில் விநாயகரும், தெற்கில் சூலமும், மேற்கே தண்டபாணியும், வடக்கே மயிலும் உள்ளனர். தீபத்தம்பம் மண்டபத்துடன் உள்ளது.
		\n\n\tஉள்ளே நுழைந்தால் தெற்குப் பிரகாரத்தில் கைலாசநாதர் ஞானாம்பிகை திருக்கோயில் கிழக்கு நோக்கி இருப்பதைக் காணலாம். நவகன்னியருக்கும், நவவீரர்களுக்கும், இங்கு தவமிருந்த உமாதேவியாருக்கும் கைலாசத்திலிருந்து எழுந்தருளி அருள் கொடுத்தவர் கைலாசநாதர்.
		\n\n\tஎனவே இத்தலத்தில் கைலாசநாதர் தொடர்பு மிகப் புராதனமானது. தலபுராணத்தில் சுப்பிரமணியர் வள்ளி, தெய்வானைக்கும் முன்னர் கைலாசநாதருக்கும் ஞானாம்பிகைக்கும் வணக்கும் கூறப்படுகிறது. எதிரில் புளியமரம் உள்ளது. கன்னிமூலை விநாயகர் தென்மேற்கிலும், தண்டபாணி வடமேற்கிலும் மேற்குப் பிரகாரத்தில் எழுந்தருளியுள்ளனர். சனிபகவான், நவககிரகக் சன்னதிகளைக் கடந்து கொடிமரம், மயில்வாகக் குறடு, பலிபீடம் கடந்து சென்று சுமுகர் சதேகர் எனும் துவார பாலகர்களைக் கடந்த சுப்பிரமணியரை வணங்கிப் பேறு பெறலாம். கலியுகத்தில் கண்கண்ட கடவுளாய்க் கருவறையில் வள்ளியோடு சுப்பிரமணியர் எழுந்தருளியுள்ளார். பின்னர் சுப்பிரமணியார், வள்ளி தெயவானைத் திருக்கோலத்தை கண்டு வணங்கி வேண்டியவற்றை வேண்டியாங்கு பெற்று வாழ்வாங்கு வாழலாம்.

	</string>
    <string name="thiruparakundram_title5">காட்சி கொடுத்த சிவன்-பார்வதி</string>
    <string name="thiruparakundram_content5">\t\t\t\t\tகடைசியில், சிவபெருமானும், பார்வதி தேவியாரும் தோன்றி, முருகப் பெருமானுக்கு அங்குக் காட்சி தந்து அருளினார்கள். அவர்கள் இங்கு பரங்கிநாதர் என்றும், ஆவுடை நாயகி என்றும் பெயர் பெற்றார்கள்.
\n\n
அவர்களுடைய ஆலயம் இன்றும் திருப்பரங்குன்றத்தில் மீனாட்சி சுந்தரேஸ்வரர் ஆலயம் என்னும் பெயரில் வழங்கி வருகிறது. எனவே திருப்பரங்குன்றம் செல்லும் பக்தர்கள் முதலில் சிவன்-பார்வதியை தரிசனம் செய்த பிறகே முருகன் ஆலயத்திற்குச் செல்ல வேண்டுமென்பது ஐதீகம்.
\n\n
முருகப்பெருமானுக்கு சிவபெருமான் தை மாதத்தில் பூச நட்சத்திரத்தன்று காட்சித் தந்தார். எனவே தைப்பூசத்தன்று சிவபெருமானையும், முருகக் கடவுளையும் வழிபடுகின்றவர்கள் இஷ்ட சித்திகளைப் பெறுவார்கள் என்று கூறப்படுகிறது. எனவே திருப்பரங்குன்றத்தில் தைப்பூச விழா பத்து நாட்கள் சிறப்பாகக் கொண்டாடப்படுகிறது.</string>
    <string name="thiruparakundram_title6">அவதரித்ததன் நோக்கம்</string>
    <string name="thiruparakundram_content6">\t\t\t\t\tமுருகப்பெருமான் அவதாரம் செய்ததன் நோக்கமே சூரபத்மனையும், அவனது சேனைகளையும் அழித்து தேவர்களைக் காப்பதேயாகும். அவ்வண்ணமே முருகப்பெருமான் அவதாரம் செய்து, சூரபத்மனை அழித்து, அவனை மயிலும் சேவலுமாக்கி, மயிலை வாகனமாகவும், சேவலை கொடியாகவும் ஏற்றுக் கொண்டருளினார்.</string>
    <string name="thiruparakundram_title7">தெய்வயானை திருமணம்</string>
    <string name="thiruparakundram_content7">\t\t\t\t\tதேவர்கள் துயர் களையப் பெற்றார்கள். அதனால் முருகப்பெருமானுக்குத் தன்னுடைய நன்றியைச் செலுத்தும் வகையில் இந்திரன் தன் மகளாகிய தெய்வயானையை திருமணம் செய்து கொடுக்க விரும்பினான். முருகன் - தெய்வானை திருமணம் திருப்பரங்குன்றத்தில் நடந்தது.

திருமண விழாவில் பிரம்மா விவாக காரியங்கள் நிகழ்த்த, சூரிய, சந்திரர்கள் ரத்ன தீபங்கள் தாங்கி நிற்க, பார்வதி பரமேஸ்வரர் பரமானந்தம் எய்தி நிற்க, இந்திரன் தெய்வயானையைத் தாரை வார்த்து கொடுக்க, முருகப்பெருமான், தெய்வயானையைத் திருமணம் செய்து கொண்டதாகத் திருப்பரங்குன்றப் புராணம் கூறுகிறது.</string>
    <string name="tiruchendur_main_content">\t\t\tசித்திரைக் கனி என்னும் தமிழ்வருடப் பிறப்பு, சித்ரா பௌர்ணமி, வைகாசி விசாகம், ஆனித் திருமஞ்சனம், ஆடிப் பதினெட்டு, ஆடி அமாவாசை, ஆடி சஷ்டி, ஆவணி அவிட்டம், விநாயக சதுர்த்தி , நவராத்திரி, ஐப்பசி கந்தர் சஷ்டி, சூரசம்உறாரம், கார்த்திகை ஜோதி, மார்கழி மாதப்பூசை, திருவாதிரை, தைமாதம் திருத்தேர், மாசி மகம், பங்குனி உத்திரம் ஆகிய திருவிழாக்கள் கோயிலில் மிகவும் சிறப்பாக நடைபெறுகின்றன. மற்றும் அமாவாசை, சஷ்டி, கிருத்திகை, பௌர்ணமி நாள், வெள்ளிக் கிழமை போன்ற நாட்களில் அன்பர்கள் வந்து சுப்பிரமணியரைத் தரிசிப்பர். மற்ற நாட்களிலும் பொது மக்கள் வருவர். அண்மைக் காலத்தில் சிவன்மலையில் திருமண நிகழ்ச்சிகள் மிகுதியாக நடைபெறுகின்றன. ஆடி சஷ்டியில் அன்னதானம் சிறப்பாக நடைபெறும். கார்த்திகை மாதம் பௌர்ணமியில் வரும் கார்த்திகை அன்று வழிபடுவது மிகவும் விசேடம் என்று தலபுராணம் கூறுகிறது.

	</string>
    <string name="tiruchendur_title1">தைப்பூசத் தேர்திருவிழா :</string>
    <string name="tiruchendur_content1">\t\t\tதைப்பூசத் தேர் திருவிழா நிகழ்ச்சிகள் பின்வருமாறு நடைபெறுகின்றன. விழாவின் தொடக்கமாக முதல் நாள் இரவு 9 மணிக்கு கிராம தேவதை அருள்மிகு வீரகாளியம்மன் கோயிலில் கொடியேற்றம் நடைபெறும். இரண்டாம் நாள் இரவு 7 மணிக்கு அருள்மிகு வீரகாளியம்மன் திருவுலாக்காட்சி நடைபெறும். மூன்றாம் நாள் இரவு 9 மணிக்கு அருள்மிகு வீரகாளியம்மன் திருத்தேர்த் திருவிழாவும், கிராம சாந்தியும் நடைபெறும்.

	</string>
    <string name="tiruchendur_title2">கோவில் சிறப்பு உத்தரவு பெட்டி : </string>
</resources>