<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liteart.apps.sivanmalai.com.liteart.apps.sivanmalai.ArupadaiVeedugalAcivity">
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_arupadai_veedugal"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_2">

    </com.google.android.gms.ads.AdView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#000"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#006400"
        android:text="“ஓம் சரவண பவாய நம”"
        />
    <TableRow
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginLeft="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:layout_marginRight="@dimen/arupadaiveedugal_layout_margin_10dp"
        >
        <Button
            android:layout_marginRight="2.5dp"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_thiruparakundram"
            android:text="@string/thiruparakundram"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
        <Button
            android:layout_marginLeft="2.5dp"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_tiruchendur"
            android:text="@string/tiruchendur"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginLeft="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:layout_marginRight="@dimen/arupadaiveedugal_layout_margin_10dp"
        >
        <Button
            android:layout_marginRight="2.5dp"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_palani"
            android:text="@string/palani"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
        <Button
            android:layout_marginLeft="2.5dp"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_swamimalai"
            android:text="@string/swamimalai"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginLeft="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:layout_marginRight="@dimen/arupadaiveedugal_layout_margin_10dp"
        >
        <Button
            android:layout_marginRight="2.5dp"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_thiruthanigai"
            android:text="@string/thiruthanigai"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
        <Button
            android:layout_marginLeft="2.5dp"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_palamuthirsolai"
            android:text="@string/palamuthirsolai"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
    </TableRow>
    <Button
        android:id="@+id/btn_news"
        android:layout_marginTop="20dp"
        android:background="#000"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#006400"
        android:text="@string/news"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/murugan_white"
            android:layout_alignParentBottom="true"/>
        <android.support.v4.view.ViewPager
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/viewPager"/>
    </RelativeLayout>
</TableLayout>
