<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="56dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.liteart.apps.sivanmalai.com.liteart.apps.sivanmalai.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/murugan_white"
            android:layout_alignParentTop="true"/>
        <android.support.v4.view.ViewPager
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewPager"/>
    </RelativeLayout>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#000"

    >
    <Button
        android:layout_marginRight="10dp"
        android:id="@+id/btn_maps"
        android:background="@drawable/maps_icon"
        android:layout_marginTop="7dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"/>
    <View
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/view"
        android:layout_toLeftOf="@id/btn_maps"
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="#000000"/>

    <Button
        android:background="#000000"
        android:layout_marginLeft="10dp"
        android:layout_toLeftOf="@id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="“அருள்மிகு சுப்ரமணசாமி கோயில் சிவன்மலை-காங்கேயம்” "
        android:textAlignment="center"
        android:textSize="13dp"
        android:textStyle="bold"
        android:textColor="#ead703"

        android:padding="10dp"
        />



</RelativeLayout>
   <!-- <Button
        android:id="@+id/btn_arupadaiveedugal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:background="@drawable/arupadaibtn"/>-->
        <Button
            android:id="@+id/btn_arupadaiveedugal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_button_shape"
            android:padding="10dp"
            android:text="@string/arupadai_veedugal"
            android:textColor="#fff"
            android:textStyle="bold"
           />
    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:singleLine="true"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="2.7dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_essay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/essay"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>
        <Button
            android:singleLine="true"
            android:layout_weight="1"
            android:layout_marginLeft="2.7dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_button_shape"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="13.7dp"
            android:id="@+id/btn_articles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/articles"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </LinearLayout>
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stories"
        android:padding="10dp"/>
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/videos"
        android:padding="10dp"/>
    <Button
        android:visibility="gone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_kanthapuranam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kantha_puranam"
        android:padding="10dp"/>
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_songs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songs_main_title"
        android:padding="10dp"/>

    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_fm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fm"
        android:padding="10dp"/>
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:padding="10dp"/>
    <com.google.android.gms.ads.AdView
        android:layout_marginTop="5dp"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_main"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_1"/>

</LinearLayout>
    </ScrollView>